RASS-1745 update wording to be hearing

--- a/server/views/pages/courtAppearance/select-reference.njk
+++ b/server/views/pages/courtAppearance/select-reference.njk
@@ -21,7 +21,7 @@
                         }
                     },
                     hint: {
-                        text: "This is the case reference used in the previous appearance."
+                        text: "This is the case reference used in the previous hearing."
                     },
                     items: [
                         {
