Rass 1740 update links in linear journey (#1239)
* RASS-1470-links updated in linear journey

* RASS-1470-tests removed regarding back link

* RASS-1470-small refactoring

* RASS-1740-goToCourtHearingLayout and goToCourtCaseLayout added

* RASS-1740-cleaning code

* RASS-1740-renaming layout file

--- a/server/views/partials/goToCourtCaseHearingDetailsLayout.njk
+++ b/server/views/partials/goToCourtCaseHearingDetailsLayout.njk
@@ -1,4 +1,4 @@
-{% extends "./goToCourtHearingLayout.njk" %}
+{% extends "./goToCourtCaseLayout.njk" %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
@@ -13,6 +13,7 @@
 {% endset %}
 
 {% block content %}
+    {{ super() }}
 
     <div class="govuk-grid-row govuk-!-margin-top-4">
 
@@ -65,5 +66,4 @@
             </div>
         {% endif %}
     </div>
-        {{ super() }}
 {% endblock %}
