--- a/server/views/partials/goToCourtHearingLayout.njk
+++ b/server/views/partials/goToCourtHearingLayout.njk
@@ -1,6 +1,19 @@
 {% extends "./prisonerBannerLayout.njk" %}
+{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
-{% block subNavigation %}{% endblock %}
+{% block subNavigation %}
+<div class="govuk-grid-row" role="navigation">
+            {% if backLink.length %}
+                <div class="govuk-grid-column-one-half">
+                    {{ govukBackLink({
+                        text: "Back",
+                        href: backLink,
+                        attributes: {  'data-qa': 'back-link' }
+                    }) }}
+                </div>
+            {% endif %}
+            </div>
+{% endblock %}
 
 {% block content %}
     {{ super() }}
@@ -8,7 +21,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <div class="govuk-!-margin-top-8"> {# Increased margin for better separation #}
+            <div class="govuk-!-margin-top-8">
                 <a href="/person/{{ nomsId }}/{{addOrEditCourtCase}}/{{courtCaseReference}}/{{addOrEditCourtAppearance}}/{{ appearanceReference }}/task-list"
                    class="govuk-link govuk-body-m"
                    data-qa="return-to-appearance-link">
