RASS-1735-Cancel button inserted in Remand journey

--- a/server/views/pages/courtAppearance/check-next-appearance-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-appearance-answers.njk
@@ -1,6 +1,7 @@
 {% extends "../../partials/goToCourtHearingLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - Check next appearance answers" %}
 
@@ -100,6 +101,7 @@
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-next-appearance-answers">
                         Confirm and continue
                     </button>
+                    {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
                 </div>
             </form>
 
