--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
-
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - Add a case reference" %}
 
@@ -39,10 +39,15 @@
                     ]
                     }) }}
 
-                {{ govukButton({
-                    text: "Continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                                {{ govukButton({
+                                    text: "Continue",
+                                    attributes: {  'data-qa': 'continue-button' }
+                                }) }}
+
+                                {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+
+                                  </div>
             </form>
 {% endblock %}
 
