--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/hint/macro.njk" import govukHint %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - Add a offence outcome" %}
 
@@ -60,9 +61,14 @@
 
         {{ govukRadios(radiosData) }}
 
-        {{ govukButton({
-            text: "Continue",
-            attributes: { 'data-qa': 'continue-button' }
-        }) }}
+        <div class="govuk-button-group">
+                                        {{ govukButton({
+                                            text: "Continue",
+                                            attributes: {  'data-qa': 'continue-button' }
+                                        }) }}
+
+                                        {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+
+                                          </div>
     </form>
 {% endblock %}
