--- a/server/views/pages/offence/alternative-period-length.njk
+++ b/server/views/pages/offence/alternative-period-length.njk
@@ -4,6 +4,7 @@
 {% from "govuk/components/hint/macro.njk" import govukHint %}
 {% from "../../components/alternativeSentenceLength/macro.njk" import alternativeSentenceLength%}
 {% set pageTitle = applicationName + " - Add " + periodLengthHeader %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% block pageContent %}
             <form method="post" autocomplete="off">
@@ -67,10 +68,13 @@
 
                 {% endcall %}
 
-                {{ govukButton({
-                    text: "Continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                            {{ govukButton({
+                                text: "Continue",
+                                attributes: {  'data-qa': 'continue-button' }
+                            }) }}
+                            {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                </div>
             </form>
 
 {% endblock %}
