--- a/server/views/pages/overallSentencing/overall-conviction-date.njk
+++ b/server/views/pages/overallSentencing/overall-conviction-date.njk
@@ -3,8 +3,7 @@
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
-
-
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set yesHtml %}
     {{ govukDateInput({
@@ -84,10 +83,13 @@
 
 
 
-                {{ govukButton({
-                    text: "Continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+                <div class="govuk-button-group">
+                            {{ govukButton({
+                                text: "Continue",
+                                attributes: {  'data-qa': 'continue-button' }
+                            }) }}
+                            {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+                </div>
             </form>
 
 {% endblock %}
