--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - upload sentencing court documents" %}
 
@@ -49,7 +50,7 @@
               }
             ]
           }) }}
-        
+
         {% if not loop.last %}
           <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible govuk-!-margin-bottom-4">
         {% endif %}
@@ -70,6 +71,7 @@
           text: "Continue",
           attributes: { 'data-qa': 'continue-button' }
       }) }}
+      {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
     </div>
     {% endcall %}
   </form>
