--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -3,6 +3,8 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
+
 
 {% set pageTitle = applicationName + " - Update offence outcomes" %}
 {% set hideOffences = true %}
@@ -211,10 +213,13 @@
                         ]
                     }) }}
 
-        {{ govukButton({
-                    text: "Continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+        <div class="govuk-button-group">
+                    {{ govukButton({
+                        text: "Continue",
+                        attributes: {  'data-qa': 'continue-button' }
+                    }) }}
+                    {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+        </div>
     </form>
 
 {% endblock %}
