--- a/server/views/pages/offence/fine-amount.njk
+++ b/server/views/pages/offence/fine-amount.njk
@@ -1,6 +1,7 @@
 {% extends "../../partials/hearingDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set pageTitle = applicationName + " - Add the fine amount" %}
 
@@ -26,9 +27,12 @@
       spellcheck: false
     }) }}
 
-  {{ govukButton({
-    text: "Continue",
-    attributes: {  'data-qa': 'continue-button' }
-  }) }}
+  <div class="govuk-button-group">
+              {{ govukButton({
+                  text: "Continue",
+                  attributes: {  'data-qa': 'continue-button' }
+              }) }}
+              {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+  </div>
   </form>
 {% endblock %}
