--- a/server/views/pages/sentencing/correct-many-period-length.njk
+++ b/server/views/pages/sentencing/correct-many-period-length.njk
@@ -3,8 +3,7 @@
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
-
-
+{% from "components/cancelHearingButton/macro.njk" import cancelToConfirm %}
 
 {% set noneHtml %}
     {{ govukDateInput({
@@ -74,7 +73,7 @@
 {% block pageContent %}
     <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{chargeUuid}}/submit-correct-many-period-length{{ submitQuery }}" autocomplete="off">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-    
+
         {{ govukRadios({
             name: "correctPeriodLengthUuid",
             fieldset: {
@@ -91,10 +90,13 @@
 
 
 
-        {{ govukButton({
-            text: "Continue",
-            attributes: {  'data-qa': 'continue-button' }
-        }) }}
+        <div class="govuk-button-group">
+                    {{ govukButton({
+                        text: "Continue",
+                        attributes: {  'data-qa': 'continue-button' }
+                    }) }}
+                    {{ cancelToConfirm(nomsId, addOrEditCourtCase, courtCaseReference, addOrEditCourtAppearance, appearanceReference, currentPageUrl) }}
+        </div>
     </form>
 
 {% endblock %}
