RASS-1735-small refactoring and tests

--- a/server/views/components/cancelHearingButton/macro.njk
+++ b/server/views/components/cancelHearingButton/macro.njk
@@ -5,6 +5,9 @@
   {{ govukButton({
       text: "Cancel",
       classes: "govuk-button--secondary",
+      attributes: {
+                "data-qa": 'cancel-button'
+            },
       href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/confirm-cancel-court-case?isHearing=" + isHearing + "&returnUrl=" + currentPageUrl | urlencode
   }) }}
 {% endmacro %}
