--- a/server/views/pages/courtAppearance/cancel-court-case.njk
+++ b/server/views/pages/courtAppearance/cancel-court-case.njk
@@ -36,7 +36,7 @@
                   Are you sure you want to cancel adding a court case?
                 </h1>
 
-                    <div class="govuk-body" data-qa="appearance-description"> {{description }} </div>
+                    <div class="govuk-body" data-qa="cancel-court-case-description"> {{description }} </div>
 
                     {{ govukRadios({
                                         name: "cancelCourtCase",
