--- a/server/views/partials/goToCourtCaseHearingDetailsLayout.njk
+++ b/server/views/partials/goToCourtCaseHearingDetailsLayout.njk
@@ -1,4 +1,4 @@
-{% extends "./goToCourtCaseLayout.njk" %}
+{% extends "./prisonerBannerLayout.njk" %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
